--- a/app/src/main/res/layout/activity_menu_video.xml
+++ b/app/src/main/res/layout/activity_menu_video.xml
@@ -35,6 +35,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Video Demo 2 (Source from GG)" />
+
+            <Button
+                android:id="@+id/bt_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Video Demo 3 (Edit by Loitp)" />
         </LinearLayout>
     </ScrollView>
 
