--- a/app/src/main/res/layout/activity_video_demo_3.xml
+++ b/app/src/main/res/layout/activity_video_demo_3.xml
@@ -9,4 +9,13 @@
         android:id="@+id/uiza_video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="#000000"
+        android:padding="@dimen/padding_5"
+        android:text="Demo Video 3"
+        android:textColor="#ffffff" />
 </RelativeLayout>
