--- a/app/src/main/res/layout/uiza_video_frm.xml
+++ b/app/src/main/res/layout/uiza_video_frm.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/Blue">
+    android:layout_height="match_parent">
 
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Video"
-        android:textColor="@color/White"
-        android:textSize="@dimen/txt_32" />
 
 </RelativeLayout>
 
