--- a/app/src/main/res/layout/activity_menu_video.xml
+++ b/app/src/main/res/layout/activity_menu_video.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/bt_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Video Demo 3 (Edit by Loitp)" />
+                android:text="Video Demo 3 (Use Fragment)" />
         </LinearLayout>
     </ScrollView>
 
