--- a/app/src/main/res/layout/activity_test_video_demo_3.xml
+++ b/app/src/main/res/layout/activity_test_video_demo_3.xml
@@ -18,7 +18,7 @@
 
             <fragment
                 android:id="@+id/uiza_video"
-                class="vn.loitp.app.activity.demo.video.videodemo3.lib.frm.FrmUizaVideo"
+                class="vn.loitp.app.activity.demo.video.videodemo4.frm.FrmUizaVideo"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2"
@@ -26,7 +26,7 @@
 
             <fragment
                 android:id="@+id/uiza_video_info"
-                class="vn.loitp.app.activity.demo.video.videodemo3.lib.frm.UizaInfoVideo"
+                class="vn.loitp.app.activity.demo.video.videodemo4.frm.FrmUizaVideoInfo"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
