--- a/app/src/main/res/layout/activity_uizavideo_menu.xml
+++ b/app/src/main/res/layout/activity_uizavideo_menu.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="@dimen/padding_5">
+    android:layout_height="fill_parent">
 
+    <vn.loitp.app.activity.customviews.placeholderview._lib.placeholderview.ExpandablePlaceHolderView
+        android:id="@+id/expandableView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 </RelativeLayout>
 
