--- a/app/src/main/res/layout/row_type_uiza_video.xml
+++ b/app/src/main/res/layout/row_type_uiza_video.xml
@@ -3,7 +3,7 @@
     android:id="@+id/toggleView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bottom_border_on_dark"
+    android:background="@color/White"
     android:gravity="center"
     android:orientation="horizontal"
     android:padding="@dimen/padding_10">
