--- a/app/src/main/res/layout/row_media_uiza_video.xml
+++ b/app/src/main/res/layout/row_media_uiza_video.xml
@@ -2,48 +2,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_5"
-    android:background="@drawable/bt_tag"
+    android:background="@color/White"
     android:gravity="left"
     android:orientation="vertical"
     android:padding="@dimen/padding_5">
 
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/Black"
-        android:textSize="@dimen/txt_14"
-        android:textStyle="bold" />
+        android:background="@drawable/bt_tag"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_uri"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/app_name"
-        android:textColor="@color/grey"
-        android:textSize="@dimen/txt_10" />
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textColor="@color/Black"
+            android:textSize="@dimen/txt_14"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tv_extension"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginTop="@dimen/margin_10"
-        android:text="@string/app_name"
-        android:textColor="@color/Red"
-        android:textSize="@dimen/txt_10" />
+        <TextView
+            android:id="@+id/tv_uri"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/txt_10" />
 
-    <TextView
-        android:id="@+id/tv_ad_tag_uri"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginTop="@dimen/margin_10"
-        android:text="@string/app_name"
-        android:textColor="@color/primaryColor"
-        android:textSize="@dimen/txt_10" />
+        <TextView
+            android:id="@+id/tv_extension"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="@string/app_name"
+            android:textColor="@color/Red"
+            android:textSize="@dimen/txt_10" />
+
+        <TextView
+            android:id="@+id/tv_ad_tag_uri"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="@string/app_name"
+            android:textColor="@color/primaryColor"
+            android:textSize="@dimen/txt_10" />
+    </LinearLayout>
 
 </LinearLayout>
