--- a/app/src/main/res/layout/row_type_uiza_video.xml
+++ b/app/src/main/res/layout/row_type_uiza_video.xml
@@ -32,6 +32,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/ic_expand_more_black_48dp" />
     </LinearLayout>
 </LinearLayout>
