--- a/app/src/main/res/layout/activity_video_5.xml
+++ b/app/src/main/res/layout/activity_video_5.xml
@@ -14,14 +14,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="vertical">
 
             <fragment
                 android:id="@+id/uiza_video"
                 class="vn.loitp.app.activity.demo.video.videodemo5.frm.FrmUizaVideo"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_height="wrap_content"
                 tools:layout="@layout/uiza_video_frm" />
 
             <fragment
