--- a/app/src/main/res/layout/uiza_video_info_view_frm.xml
+++ b/app/src/main/res/layout/uiza_video_info_view_frm.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
+    android:background="@color/Black"
     android:padding="@dimen/padding_5">
 
     <TextView
