--- a/app/src/main/res/layout/uiza_video_frm.xml
+++ b/app/src/main/res/layout/uiza_video_frm.xml
@@ -18,15 +18,22 @@
         android:layout_gravity="center"
         android:background="@color/colorAccent"
         android:orientation="vertical"
+        android:padding="@dimen/padding_5"
         android:visibility="gone">
 
         <TextView
-            android:id="@+id/debug_text_view"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:textSize="10sp"
+            android:text="DEBUG VIEW, WILL BE REMOVE LATER"
+            android:textColor="@color/Red"
+            android:textSize="@dimen/txt_14"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/debug_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/txt_8"
             tools:ignore="SmallSp" />
 
         <LinearLayout
