--- a/app/src/main/res/layout/activity_video_5.xml
+++ b/app/src/main/res/layout/activity_video_5.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <!--<ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,6 +32,28 @@
                 android:layout_weight="1"
                 tools:layout="@layout/uiza_video_info_view_frm" />
         </LinearLayout>
-    </ScrollView>
+    </ScrollView>-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <fragment
+            android:id="@+id/uiza_video"
+            class="vn.loitp.app.activity.demo.video.videodemo5.frm.FrmUizaVideo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/uiza_video_frm" />
+
+        <fragment
+            android:id="@+id/uiza_video_info"
+            class="vn.loitp.app.activity.demo.video.videodemo5.frm.FrmUizaVideoInfo"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            tools:layout="@layout/uiza_video_info_view_frm" />
+    </LinearLayout>
 
 </RelativeLayout>
