--- a/demouiza/src/main/res/layout/uiza_home_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_home_activity.xml
@@ -19,26 +19,13 @@
                 layout="@layout/toolbar_home" />
 
             <TextView
+                android:id="@+id/tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/padding_5"
-                android:text="Touch Menu Icon"
-                android:textColor="@color/Black"
-                android:textSize="@dimen/txt_18"
-                android:textStyle="bold" />
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/padding_5"
-                    android:textColor="@color/grey"
-                    android:textSize="@dimen/txt_14" />
-            </ScrollView>
+                android:text="@string/app_name"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/txt_14" />
         </LinearLayout>
 
         <FrameLayout
@@ -51,7 +38,7 @@
                 android:id="@+id/drawerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical" />
+                android:scrollbars="none" />
         </FrameLayout>
     </android.support.v4.widget.DrawerLayout>
 </RelativeLayout>
