--- a/demouiza/src/main/res/layout/uiza_drawer_item.xml
+++ b/demouiza/src/main/res/layout/uiza_drawer_item.xml
@@ -12,7 +12,8 @@
         android:layout_width="@dimen/w_15"
         android:layout_height="@dimen/w_50"
         android:background="@color/Blue"
-        android:contentDescription="@string/app_name" />
+        android:contentDescription="@string/app_name"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/tv_name"
