--- a/demouiza/src/main/res/layout/uiza_drawer_item.xml
+++ b/demouiza/src/main/res/layout/uiza_drawer_item.xml
@@ -3,6 +3,7 @@
     android:id="@+id/mainView"
     android:layout_width="match_parent"
     android:layout_height="@dimen/w_80"
+    android:background="?attr/selectableItemBackground"
     android:gravity="center|left"
     android:orientation="horizontal"
     android:padding="@dimen/padding_10">
@@ -17,7 +18,7 @@
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_10"
         android:singleLine="true"
