--- a/demouiza/src/main/res/layout/uiza_action_bar.xml
+++ b/demouiza/src/main/res/layout/uiza_action_bar.xml
@@ -25,23 +25,33 @@
 
             <ImageView
                 android:id="@+id/iv_icon_left"
-                android:layout_width="@dimen/w_20"
-                android:layout_height="@dimen/w_20"
+                android:layout_width="@dimen/w_30"
+                android:layout_height="@dimen/w_30"
                 android:layout_marginLeft="@dimen/margin_10"
                 android:contentDescription="@string/app_name"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_keyboard_arrow_left_black_48dp" />
+                android:scaleType="centerInside" />
 
-            <TextView
-                android:id="@+id/tv_title"
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_5"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:singleLine="true"
-                android:textColor="@color/Black"
-                android:textSize="@dimen/txt_18" />
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="@dimen/w_40"
+                    android:layout_height="@dimen/w_40"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_amazon" />
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/app_name"
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/txt_18" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/iv_icon_right"
