--- a/demouiza/src/main/res/layout/uiza_home_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_home_activity.xml
@@ -14,49 +14,10 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
+            <vn.loitp.app.uiza.view.UizaActionBar
+                android:id="@+id/uiza_action_bar"
                 android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                android:background="@color/White"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="@dimen/padding_10">
-
-                <ImageView
-                    android:id="@+id/iv_menu"
-                    android:layout_width="@dimen/w_30"
-                    android:layout_height="@dimen/w_30"
-                    android:contentDescription="@string/app_name"
-                    android:src="@drawable/ic_search_black_48dp" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:layout_width="@dimen/w_40"
-                        android:layout_height="@dimen/w_40"
-                        android:contentDescription="@string/app_name"
-                        android:src="@drawable/ic_amazon" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/app_name"
-                        android:textColor="@color/Black"
-                        android:textSize="@dimen/txt_18" />
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/iv_search"
-                    android:layout_width="@dimen/w_30"
-                    android:layout_height="@dimen/w_30"
-                    android:contentDescription="@string/app_name"
-                    android:src="@drawable/ic_search_black_48dp" />
-            </LinearLayout>
+                android:layout_height="?android:attr/actionBarSize" />
 
             <TextView
                 android:id="@+id/tv"
