--- a/demouiza/src/main/res/layout/uiza_home_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_home_activity.xml
@@ -19,14 +19,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize" />
 
-            <TextView
-                android:id="@+id/tv"
+            <FrameLayout
+                android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/padding_5"
-                android:text="@string/app_name"
-                android:textColor="@color/grey"
-                android:textSize="@dimen/txt_14" />
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
         </LinearLayout>
 
         <FrameLayout
