--- a/demouiza/src/main/res/layout/uiza_frm_channel.xml
+++ b/demouiza/src/main/res/layout/uiza_frm_channel.xml
@@ -12,4 +12,11 @@
         android:text="@string/app_name"
         android:textColor="@color/Black"
         android:textSize="@dimen/txt_32" />
+
+    <vn.loitp.app.activity.customviews.placeholderview._lib.placeholderview.InfinitePlaceHolderView
+        android:id="@+id/place_holder_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tv"
+        android:scrollbars="vertical" />
 </RelativeLayout>
