--- a/demouiza/src/main/res/layout/uiza_frm_channel.xml
+++ b/demouiza/src/main/res/layout/uiza_frm_channel.xml
@@ -3,20 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="@dimen/padding_5"
-        android:text="@string/app_name"
-        android:textColor="@color/Black"
-        android:textSize="@dimen/txt_32" />
-
     <vn.loitp.app.activity.customviews.placeholderview._lib.placeholderview.InfinitePlaceHolderView
         android:id="@+id/place_holder_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tv"
         android:scrollbars="vertical" />
+
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/Red"
+        android:gravity="center"
+        android:padding="@dimen/padding_5"
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="@dimen/txt_12"
+        android:textStyle="bold" />
 </RelativeLayout>
