--- a/demouiza/src/main/res/layout/uiza_info.xml
+++ b/demouiza/src/main/res/layout/uiza_info.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/padding_5">
 
     <TextView
         android:id="@+id/tv_name"
@@ -115,14 +116,4 @@
             android:textColor="@color/grey"
             android:textSize="@dimen/txt_15" />
     </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_20"
-        android:text="More like this"
-        android:textAllCaps="true"
-        android:textColor="@color/Black"
-        android:textSize="@dimen/txt_18"
-        android:textStyle="bold" />
 </LinearLayout>
