--- a/demouiza/src/main/res/layout/uiza_video_info_frm.xml
+++ b/demouiza/src/main/res/layout/uiza_video_info_frm.xml
@@ -9,5 +9,5 @@
         android:id="@+id/place_holder_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:scrollbars="none" />
 </LinearLayout>
