--- a/demouiza/src/main/res/layout/uiza_player_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_player_activity.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/White">
 
     <!--<ScrollView
         android:id="@+id/scroll_view"
@@ -37,7 +38,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:orientation="vertical">
 
         <fragment
@@ -51,8 +51,7 @@
             android:id="@+id/uiza_video_info"
             class="vn.loitp.app.uiza.player.FrmUizaVideoInfo"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             tools:layout="@layout/uiza_video_info_frm" />
     </LinearLayout>
 
