--- a/demouiza/src/main/res/layout/uiza_poster_list.xml
+++ b/demouiza/src/main/res/layout/uiza_poster_list.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/w_200"
+    android:background="@color/White"
     android:orientation="vertical">
 
     <vn.loitp.app.activity.customviews.viewpager.parrallaxviewpager._lib.parrallaxviewpager.ParallaxViewPager
