--- a/demouiza/src/main/res/layout/uiza_video_info_frm.xml
+++ b/demouiza/src/main/res/layout/uiza_video_info_frm.xml
@@ -3,6 +3,7 @@
     android:id="@+id/scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <vn.loitp.app.activity.customviews.placeholderview._lib.placeholderview.InfinitePlaceHolderView
