--- a/demouiza/src/main/res/values-v19/styles.xml
+++ b/demouiza/src/main/res/values-v19/styles.xml
@@ -4,6 +4,6 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--<item name="android:windowBackground">@color/White</item>
         <item name="android:backgroundDimEnabled">false</item>-->
-        <item name="android:windowIsTranslucent">true</item>
+        <!--<item name="android:windowIsTranslucent">true</item>-->
     </style>
 </resources>
