--- a/demouiza/src/main/res/values-v21/styles.xml
+++ b/demouiza/src/main/res/values-v21/styles.xml
@@ -4,7 +4,8 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--<item name="android:windowTranslucentStatus">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>-->
-        <item name="android:windowIsTranslucent">true</item>
+
+        <!--<item name="android:windowIsTranslucent">true</item>-->
     </style>
 
 </resources>
