--- a/demouiza/src/main/res/values/styles.xml
+++ b/demouiza/src/main/res/values/styles.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/White</item>
+        <!--<item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>-->
         <!--<item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
